# AIVA

./: .coverage  .dockerignore  .editorconfig  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AIVA 專案模組結構調整建議.docx  AIVA 最新版本 AI 閉環功能檢查報告.docx  AIVA.code-workspace  AIVA_22_AI_COMPONENTS_DETAILED_GUIDE.md  AIVA_5M_INTEGRATION_SUCCESS_REPORT.md  AIVA_5M_REPLACEMENT_IMPLEMENTATION_GUIDE.md  AIVA_AI_AUTONOMOUS_COMPLETE_REPORT.md  AIVA_AI_CLI_GENERATION_CAPABILITIES_ASSESSMENT.md  AIVA_AI_CORE_TRANSFORMATION_REPORT_20251110.md  AIVA_AI_ENHANCEMENT_COMPREHENSIVE_IMPROVEMENT_REPORT.md  AIVA_AI_ENHANCEMENT_FIVE_MODULES_REPORT.md  AIVA_AI_LEARNING_EFFECTIVENESS_ANALYSIS.md  AIVA_AI_PARAMETER_ALLOCATION_PLAN.md  AIVA_AI_PARAMETER_ALLOCATION_PLAN_V2.md  AIVA_AI_TECHNICAL_DOCUMENTATION.md  AIVA_AI_閉環功能檢查報告.md  AIVA_ARCHITECTURE_IMPROVEMENT_RECOMMENDATIONS.md  AIVA_COMMON_STANDARDS_COMPLIANCE_REPORT.md  AIVA_COMPLETE_EXECUTION_WORKFLOW.md  AIVA_COMPLETE_WORKFLOW_PROCESS.md  AIVA_COMPREHENSIVE_GUIDE.md  AIVA_CORE_5M_CAPABILITY_REQUIREMENTS.md  AIVA_CORE_README_UPDATE_COMPLETION_REPORT.md  AIVA_CORE_V1_INTEGRATION_REPORT.md  AIVA_CROSSLANG_INTEGRATION_COMPLETE_REPORT.md  AIVA_CUSTOM_STANDARDS_REVIEW_REPORT.md  AIVA_DOCS_ISSUES_CONSOLIDATED_REPORT.md  AIVA_Enterprise_Security_Assessment_Report.md  AIVA_FEATURES_INTEGRATION_PLAN.md  AIVA_FEATURES_MODULES_INTEGRATION_COMPLETE.md  AIVA_FEATURES_SUPPLEMENT_V2_INTEGRATION_COMPLETE.md  AIVA_IMPLEMENTATION_PACKAGE.md  (+429 more)
services/: README.md  __init__.py  check_schema_health.py  pyproject.toml
services/aiva_common/: CHANGELOG.md  CODE_QUALITY_REPORT.md  README.md  README_SCHEMA.md  SECURITY_FRAMEWORK_COMPLETED.md  __init__.py  __init___backup.py  __init___fixed.py  __init___new.py  __init___old.py  ai_schemas.py  config.py  config_manager.py  continuous_components_sot.json  core_schema_sot.yaml  data_pipeline.py  enums.py  error_handling.py  metrics.py  metrics_schema.yaml  models.py  monitoring.py  monitoring_log_handler.py  mq.py  pyproject.toml  requirements.txt  schemas.py  schemas_backup.py  schemas_backup_20251016_072549.py  schemas_broken.py  schemas_compat.py  schemas_fixed.py  schemas_master_backup_2.py.disabled  security.py  security_config.py  security_middleware.py  service_discovery.py  simple_validation.py  standards.py  stream_processor.py  (+3 more)
services/aiva_common/ai/: IMPLEMENTATION_COMPLETION_REPORT.md  __init__.py  capability_evaluator.py  cross_language_bridge.py  dialog_assistant.py  experience_manager.py  integration_manager.py  interfaces.py  performance_config.py  plan_executor.py  rag_agent.py  registry.py  skill_graph_analyzer.py
services/aiva_common/async_utils/: __init__.py
services/aiva_common/cli/: __init__.py
services/aiva_common/config/: __init__.py  ai_performance_config.yaml  ai_performance_development.json  ai_performance_development.yaml  ai_performance_production.json  ai_performance_production.yaml  capability_evaluator_performance.json  capability_evaluator_performance.yaml  defaults.py  experience_manager_performance.json  experience_manager_performance.yaml  settings.py  unified_config.py
services/aiva_common/cross_language/: __init__.py  core.py  errors.py
services/aiva_common/enums/: __init__.py  academic.py  ai.py  assets.py  business.py  common.py  data_models.py  infrastructure.py  modules.py  operations.py  pentest.py  security.py  ui_ux.py  web_api_standards.py
services/aiva_common/grpc/: aiva.proto  grpc_client.py  grpc_server.py  start_grpc_server.py
services/aiva_common/messaging/: compatibility_layer.py  retry_handler.py  unified_topic_manager.py
services/aiva_common/observability/: __init__.py
services/aiva_common/plugins/: __init__.py
services/aiva_common/protocols/: aiva_enums.proto  aiva_enums_pb2.py  aiva_enums_pb2_grpc.py  aiva_errors.proto  aiva_errors_pb2.py  aiva_errors_pb2_grpc.py  aiva_services.proto  aiva_services_pb2.py  aiva_services_pb2_grpc.py  generate_proto.py
services/aiva_common/schemas/: __init__.py  ai.py  analysis.py  api_standards.py  api_testing.py  assets.py  async_utils.py  base.py  cli.py  (+16 more)
services/attack/: __init__.py
services/authz/: __init__.py
services/bizlogic/: __init__.py  finding_helper.py  price_manipulation_tester.py  race_condition_tester.py  workflow_bypass_tester.py
services/cli/: __init__.py  _utils.py  aiva_cli.py  aiva_enhanced.py  tools.py
services/core/: AI_INTEGRATION_EXECUTION_PLAN.md  CORE_MODULE_GUIDE.md  DEPENDENCY_ANALYSIS.md  DEVELOPMENT_STANDARDS.md  IMPORT_FIX_PROGRESS.md  README.md  __init__.py  ai_models.py  models.py  pytest.ini  requirements.txt  session_state_manager.py
services/features/: ADVANCED_ARCHITECTURE_ANALYSIS_REPORT.md  ANALYSIS_FUNCTION_MECHANISM_GUIDE.md  DEVELOPMENT_STANDARDS.md  MIGRATION_GUIDE.md  ORGANIZATION_ANALYSIS_ISSUES_LOG.md  ORGANIZATION_ANALYSIS_V2_ISSUES_LOG.md  PRACTICAL_ORGANIZATION_DISCOVERY_REPORT.md  README.md  README_backup.md  README_new.md  ULTIMATE_ORGANIZATION_DISCOVERY_FINAL_REPORT.md  ULTIMATE_ORGANIZATION_DISCOVERY_V2_FINAL_REPORT.md  __init__.py  example_config.py  feature_step_executor.py  high_value_guide.py  high_value_manager.py  models.py  smart_detection_manager.py  test_schemas.py
services/function/: README.md  __init__.py  migrate_all_go_services.ps1  migrate_go_service.ps1  models.py  test_schemas.py  verify_go_builds.ps1
services/integration/: AIVA 多語言程式處理能力的實現研究.docx  DOCUMENTATION_RESTRUCTURE_REPORT.md  INTEGRATION_README_FINAL_SUMMARY.md  INTEGRATION_README_UPDATE_SUMMARY.md  README.md  README_OLD_BACKUP.md  __init__.py  alembic.ini  models.py  service_schemas.py
services/postex/: __init__.py  data_exfiltration_tester.py  privilege_escalator.py
services/remediation/: code_fixer.py
services/scan/: README.md  README_COMPREHENSIVE.md  SCAN_FLOW_DIAGRAMS.md  SCAN_MODELS_FIX_REPORT.md  SCAN_MODULE_GUIDE.md  SCAN_MODULE_RESTORATION_PLAN.md  SCAN_USER_GUIDE.md  __init__.py  discovery_schemas.py  models.py  sarif_converter.py  sarif_converter_backup.py  schemas.py  unified_scan_engine.py
services/threat_intel/: intel_aggregator.py
(+3990 files in other folders)
