[package]
name = "function_sast_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# 異步運行時
tokio = { version = "1.35", features = ["full"] }
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# RabbitMQ 客戶端
lapin = "2.3"
# 日誌
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 錯誤處理
anyhow = "1.0"
thiserror = "1.0"
# 異步 Stream 擴展
futures-lite = "2.0"
# 語法樹解析器
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
# 正則表達式
regex = "1.10"
# UUID 生成
uuid = { version = "1.6", features = ["v4", "serde"] }
# 時間處理
chrono = { version = "0.4", features = ["serde"] }
# 文件處理
walkdir = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
