[package]
name = "function_sast_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# 異步運行時
tokio = { version = "1.42", features = ["full"] }
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# RabbitMQ 客戶端
lapin = "2.5"
# 日誌
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 錯誤處理
anyhow = "1.0"
thiserror = "2.0"
# 語法樹解析器
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
# 正則表達式
regex = "1.11"
# UUID 生成
uuid = { version = "1.11", features = ["v4", "serde"] }
# 時間處理
chrono = { version = "0.4", features = ["serde"] }
# 文件處理
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
