[package]
name = "aiva-info-gatherer"
version = "1.0.0"
edition = "2021"

[dependencies]
# 正則引擎
regex = "1.10"
aho-corasick = "1.1"

# 並行處理
rayon = "1.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RabbitMQ 客戶端
lapin = "2.3"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-lite = "2.6"

# 日誌
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
