[package]
name = "aiva-info-gatherer"
version = "1.0.0"
edition = "2021"

[dependencies]
# 正則引擎
regex = "1.10"
aho-corasick = "1.1"

# 並行處理
rayon = "1.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID 生成
uuid = { version = "1.6", features = ["v4"] }

# 時間處理
chrono = { version = "0.4", features = ["serde"] }

# HTTP 客戶端 (用於 API 驗證)
reqwest = { version = "0.11", features = ["json"] }

# RabbitMQ 客戶端
lapin = "2.3"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-lite = "2.6"

# 日誌
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git 操作
git2 = "0.18"

# AIVA 共用模組 (統計收集)
aiva_common_rust = { path = "../../features/common/rust/aiva_common_rust" }

# 熵值計算（已使用內建 HashMap）

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
