[workspace]
# 獨立包，不從父工作區繼承

[package]
name = "aiva-info-gatherer"
version = "1.0.0"
edition = "2021"

[dependencies]
# 正則引擎
regex = "1.10"
aho-corasick = "1.1"

# 並行處理
rayon = "1.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID 生成 (可選)
uuid = { version = "1.6", features = ["v4"], optional = true }

# 時間處理
chrono = { version = "0.4", features = ["serde"] }

# HTTP 客戶端 (用於 API 驗證)
reqwest = { version = "0.11", features = ["json"] }

# CLI 參數解析
clap = { version = "4.4", features = ["derive"] }

# 異步運行時 (移除不需要的 RabbitMQ 依賴)
tokio = { version = "1.35", features = ["full"] }

# 日誌
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git 依賴已移除 - 專注於實戰 Bug Bounty 測試

# 熵值計算（已使用內建 HashMap）

# URL 處理 (可選)
url = { version = "2.4", optional = true }

[features]
default = ["uuid", "url"]
uuid = ["dep:uuid"]
url = ["dep:url"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
