[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiva-go-plugin"
version = "0.1.0"
description = "從 aiva_common Python schemas 生成 Go 結構體和類型定義"
authors = [{name = "AIVA Team"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
aiva-go-gen = "aiva_go_plugin:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "PL"]
ignore = ["E501"]
