[package]
name = "aiva_common_rust"
version = "0.1.0"
edition = "2021"
description = "AIVA 平台 Rust 共用模組"
authors = ["AIVA Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"